Added pics to candidates component

--- a/src/app/cmp-candidates/cmp-candidates.component.html
+++ b/src/app/cmp-candidates/cmp-candidates.component.html
@@ -1,3 +1,6 @@
-<p>
-  cmp-candidates works!
-</p>
+<ul>
+	<li *ngFor="let candidate of candidates" class="candidate">
+		<img src="assets/candidates_pics/{{candidate.id}}_j.jpg"/>
+	</li>
+
+</ul>
