--- a/src/app/cmp-candidates/cmp-candidates.component.html
+++ b/src/app/cmp-candidates/cmp-candidates.component.html
@@ -1,3 +1,7 @@
+<div *ngFor="let alert of alerts">
+  <alert [type]="alert.type" [dismissOnTimeout]="alert.timeout" (onClosed)="onClosed(alert)" (onClosed)="onClosed(alert)">{{ alert.msg }}</alert>
+</div>
+
 <div class="candidates-container">
 	<div *ngFor="let candidate of candidates" class="candidate" 
 		[class.selected]="selected.indexOf(candidate.id) != -1" 
