--- a/src/app/cmp-candidates/cmp-candidates.component.html
+++ b/src/app/cmp-candidates/cmp-candidates.component.html
@@ -1,5 +1,10 @@
 <div *ngFor="let alert of alerts">
-  <alert [type]="alert.type" [dismissOnTimeout]="alert.timeout" (onClosed)="onClosed(alert)" (onClosed)="onClosed(alert)">{{ alert.msg }}</alert>
+  <alert [type]="alert.type" 
+  		 [dismissOnTimeout]="alert.timeout" 
+  		 (onClosed)="onClosed(alert)"
+  		 [dismissible]="true">
+  		{{ alert.msg }}
+  </alert>
 </div>
 
 <div class="candidates-container">
