Created small container for candidates container

--- a/src/app/cmp-candidates/cmp-candidates.component.html
+++ b/src/app/cmp-candidates/cmp-candidates.component.html
@@ -7,7 +7,7 @@
   </alert>
 </div>
 
-<div class="candidates-container">
+<div class="candidates-container" [class.small-container] = "!isPrincipal">
 	<div *ngFor="let candidate of candidates" class="candidate" 
 		[class.selected]="selected.indexOf(candidate.id) != -1" 
 		(click) = "clickCandidate(candidate.id)">
