--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,7 +1,7 @@
 <h1>SISMÓGRAFO ELECTORAL</h1>
 <p>un desarrollo de WHALE & JAGUAR</p>
 <h2 class="instructions">Seleccione 4 candidatos</h2>
-<app-cmp-candidates [(selected)] = "candidates" [limit] = 4></app-cmp-candidates>
+<app-cmp-candidates [(selected)] = "candidates" [limit] = 4 [isPrincipal]="false"></app-cmp-candidates>
 <div class="start-btn-container">
 	<button class="start-btn">¡Empezar!</button>
 </div>
