--- a/src/app/cmp-candidates/cmp-candidates.component.scss
+++ b/src/app/cmp-candidates/cmp-candidates.component.scss
@@ -34,15 +34,16 @@
 
 		}
 	}
-
-	.selected{
-		@for $i from 1 to 5 {
-			&:nth-child(4n + #{$i}){
-				img{
-					box-shadow: if($i == 3 or $i == 2 , 10px, -10px) if($i > 2 , 10px, -10px)   blue;
+	&:not(.small-container){
+		.selected{
+			@for $i from 1 to 5 {
+				&:nth-child(4n + #{$i}){
+					img{
+						box-shadow: if($i == 3 or $i == 2 , 10px, -10px) if($i > 2 , 10px, -10px)   blue;
+					}
 				}
-			}
-		}		
+			}		
+		}
 	}
 }
 
@@ -51,32 +52,32 @@
 		position: relative;
 		margin: 0 auto;
 		.candidate-name{
-			width: 100%;
+			width: auto;
 			position: absolute;
-			background-color: rgba(255, 255, 255, 0.5);;
-			border-width: 0;
-			height: 100%;
+			background-color: white;
 			vertical-align: center;
-			padding-top: 20%;
-			text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+			top:0;
 
 		}		
 
 		img{
-			width: auto;
-			max-width: 70px;
+			// width: auto;
+			width: 70px;
 			margin: 5px;
+			border-top: 3px;
+			border-left: 3px;
+			border-right: 3px;
+			border-bottom: 0px;
+			border-style: solid;
+			border-color: rgba(0,0,0,0)
+
 		}
 	}
 
 	.selected{
-		@for $i from 1 to 5 {
-			&:nth-child(4n + #{$i}){
-				img{
-					box-shadow: if($i == 3 or $i == 2 , 5px, -5px) if($i > 2 , 5px, -5px)   blue;
-				}
-			}
-		}		
+		img{
+			border-color: blue;
+		}	
 	}
 
 
