git created credits component

--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,5 +1,5 @@
 <h1>SISMÓGRAFO ELECTORAL</h1>
-<p>un desarrollo de WHALE & JAGUAR</p>
+<app-cmp-credits></app-cmp-credits>
 <h2 class="instructions">Seleccione 4 candidatos</h2>
 <app-cmp-candidates [(selected)] = "candidates" [limit] = 4 ></app-cmp-candidates>
 <div class="start-btn-container">
