--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,7 +1,11 @@
-<h1>SISMÓGRAFO ELECTORAL</h1>
+<h1>
+	SISMÓGRAFO ELECTORAL
+</h1>
 <app-cmp-credits></app-cmp-credits>
-<h2 class="instructions">Seleccione 4 candidatos</h2>
-<app-cmp-category-choose *ngIf="areCandidatesChoosen"></app-cmp-category-choose>
+<h2 class="instructions">
+	Seleccione 4 candidatos
+</h2>
+<app-cmp-category-choose *ngIf="areCandidatesChoosen" (chosenCategoryIdChange) = "openViz($event)"></app-cmp-category-choose>
 <app-cmp-candidates [(selected)] = "candidates" [limit] = 4 [isPrincipal] = "!areCandidatesChoosen"></app-cmp-candidates>
 <div *ngIf="!areCandidatesChoosen" class="start-btn-container">
 	<button class="start-btn" (click)="chooseCandidates()">¡Empezar!</button>
