--- a/src/app/viz/viz.component.html
+++ b/src/app/viz/viz.component.html
@@ -1,4 +1,4 @@
 <div>
-  <nvd3 [options]="options" [data]="data"></nvd3>
+  <app-cmp-graph [candidatesIds]="candidatesIds" [category]="category"></app-cmp-graph>
 </div>
 
