--- a/src/app/viz/viz.component.html
+++ b/src/app/viz/viz.component.html
@@ -1,5 +1,8 @@
-<div>
-  <app-cmp-graph [candidatesIds]="candidatesIds" [category]="category"></app-cmp-graph>
-  <app-cmp-candidates [(selected)] = "candidatesIds" [limit] = 4 [isPrincipal] = "false"></app-cmp-candidates>
-</div>
+<h1>
+	SISMÓGRAFO ELECTORAL
+</h1>
+<app-cmp-credits></app-cmp-credits>
+<app-cmp-graph [candidatesIds]="candidatesIds" [category]="category"></app-cmp-graph>
+<app-cmp-candidates [(selected)] = "candidatesIds" [limit] = 4 [isPrincipal] = "false"></app-cmp-candidates>
+
 
