--- a/src/app/cmp-candidates/cmp-candidates.component.html
+++ b/src/app/cmp-candidates/cmp-candidates.component.html
@@ -12,6 +12,6 @@
 		[class.selected]="selected.indexOf(candidate.id) != -1" 
 		(click) = "clickCandidate(candidate.id)">
 		<div class="candidate-name">{{candidate.name}}</div>
-		<img src="assets/candidates_pics/{{candidate.id}}_j.jpg"/>
+		<img src="assets/candidates_pics/{{candidate.id}}_j.jpg" [style.color]= "candidate.color" />
 	</div>
 </div>
